welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: class Array takes type parameters
def AugmenterTaille(tab:Array){
                        ^golomb:14: error: type mismatch;
 found   : Unit
 required: Array[Int]
    Tableau = AugmenterTaille(Tableau)
                             ^golomb:21: error: class Array takes type parameters
def AugmenterTaille(tab:Array){
                        ^golomb:24: warning: enclosing method AugmenterTaille has result type Unit: return value discarded
  return newTab
  ^